[metadata]
name = oxDNA_analysis_tools
version = attr: oxDNA_analysis_tools.__version__
author = Erik Poppleton
author_email = epopplet@asu.edu
description = Python scripts and libraries for structural analysis of oxDNA simulations.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sulcgroup/oxdna_analysis_tools
project_urls =
    Bug Tracker = https://github.com/sulcgroup/oxdna_analysis_tools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
#package_data = {'oxdna_analysis_tools': ['src.oxDNA_analysis_tools/cython_utils/*.pyx']}
include_package_data = True
package_dir = = src
packages = find:
python_requires = >=3.9
install_requires =
		 numpy > 1.16
		 scikit-learn > 0.21.2
		 matplotlib > 3.0.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
		oat = oxDNA_analysis_tools.entry:main
